<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E6FDFF"
    android:padding="16dp">

    <EditText
        android:id="@+id/etTripName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/trip_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/etCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:inputType="text" />

    <TextView
        android:id="@+id/weatherText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weather_condition_not_fetched"
        android:padding="8dp" />

    <EditText
        android:id="@+id/etStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/start_date_yyyy_mm_dd"
        android:inputType="date"
        android:focusable="false" />

    <EditText
        android:id="@+id/etEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/end_date_yyyy_mm_dd"
        android:inputType="date"
        android:focusable="false" />

    <EditText
        android:id="@+id/etNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notes"
        android:inputType="textMultiLine" />

    <CheckBox
        android:id="@+id/cbBusiness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/business" />

    <CheckBox
        android:id="@+id/cbLeisure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leisure" />

    <CheckBox
        android:id="@+id/cbFamily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/family" />

    <CheckBox
        android:id="@+id/cbAdventure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adventure" />

    <Button
        android:id="@+id/btnCreateTrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#00BCD4"
        android:text="@string/create_trip" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#00BCD4"
        android:text="@string/back" />

</LinearLayout>