<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.prog7314poepart2.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.prog7314poepart2.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.prog7314poepart2.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/contactUsFragment"
        android:name="com.example.prog7314poepart2.ContactUsFragment"
        android:label="fragment_contact_us"
        tools:layout="@layout/fragment_contact_us" />

    <fragment
        android:id="@+id/cheapFlightsFragment"
        android:name="com.example.prog7314poepart2.CheapFlightsFragment"
        android:label="@string/cheap_flights"
        tools:layout="@layout/fragment_cheap_flights" />

</navigation>