<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="6dp"
    android:foreground="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Trip title -->
        <TextView
            android:id="@+id/tripTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trip_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <!-- Trip country -->
        <TextView
            android:id="@+id/tripCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textSize="14sp"
            android:textColor="#555555"
            android:layout_marginTop="4dp"/>

        <!-- Start Date -->
        <TextView
            android:id="@+id/tripStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_21_february_2025"
            android:textSize="14sp"
            android:textColor="#555555"
            android:layout_marginTop="2dp"/>

        <!-- End Date -->
        <TextView
            android:id="@+id/tripEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_25_february_2025"
            android:textSize="14sp"
            android:textColor="#555555"
            android:layout_marginTop="2dp"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
