<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#E6FDFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheapFlightsFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/origin_iata_code_e_g_jnb"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginBottom="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/originInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/destination_iata_code_e_g_lhr"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginBottom="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/destinationInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/departure_date"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginBottom="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateInput"
            android:focusable="false"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/return_date"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/returnDateInput"
            android:focusable="false"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/searchButton"
        android:text="@string/search_flights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cornerRadius="16dp"
        app:backgroundTint="@color/purple_500"
        android:textColor="@android:color/white"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/flightsRecycler"
        android:layout_width="374dp"
        android:layout_height="260dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingBottom="16dp" />
</LinearLayout>
